enum -> num renaming as wanted by gli
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1694 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -104,6 +104,8 @@ TODO:
   - setup.py and distribution:
     - create siteconfig on install to store positions of the shared data
       and the global pyxrc
+  - graph modules:
+    - enum -> num renaming
 
 0.6.2 (2004/04/07):
   - graph module:
