--- a/manual/graph.tex
+++ b/manual/graph.tex
@@ -131,7 +131,7 @@ ratio=goldenmean, key=None, backgroundattrs=None, axesdist="0.8 cm",
   \var{axisdist} is the distance between axes drawn at the same side
   of a graph.
 
-  \var{**axes} recieves axes instances. Allowed keywords (axes names)
+  \var{**axes} receives axes instances. Allowed keywords (axes names)
   are \code{x}, \code{x2}, \code{x3}, \emph{etc.} and \code{y},
   \code{y2}, \code{y3}, \emph{etc.} When not providing a \code{x} or
   \code{y} axis, linear axes instances will be used automatically.
