cleanup of the comments regarding the epsilon in normpath
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1700 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -51,17 +51,9 @@ TODO:
     - support single-character mode
   - path module:
     - arclentoparam should raise an exception when the arclen is out of range
-    - it seems to be, that epsilon is a feature of normsubpath;
-      AW: Why is there (also) a self.epsilon?
-      JL: What class does self refer to?
-      AW: I'm sorry for not being precise. Both, normpath and normsubpath do
-          have an epsilon. I'm not sure if we should do that (its slightly
-          confusing). In normpath._findsubpath we should refer to the
-          epsilons of the subpath. The only usage of epsilon left in normpath
-          is in the constructor and in append (BTW -- we do have some code
-          dublication here). A possibility would be to add a keyword-argument
-          epsilon to append. The point is, that I would like to get rid of
-          self.epsilon, where self is a normpath instance ...
+    - there are two epsilons related to normpath, one in the normpath and
+      one in the subnormpath; while the later seems a clear feature, the first
+      might be a misdesign; a solution is still pending ...
   - color module:
     - what should we do for palette when only one entry
 
