add a note about a documentation TODO
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1707 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -92,7 +92,8 @@ TODO:
     - unit.cm, unit.t_cm, etc. are no longer sub classes but instances
       of length
     - never convert implicitly into visual/width, etc. lengths (this is more
-      about usage of the unit module in various other modules)
+      about usage of the unit module in various other modules) (TODO: update
+      documentation)
     - support for string initialization commented out, so its currently still
       easy to turn it on again (TODO: documentation)
   - canvas module:
