fix drawing with background
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/branches/pyx_0_6_patches/pyx@1710 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -67,6 +67,9 @@ TODO:
     - describe creation and modification (inplace and ``modify by new'') of
       graph data
 
+0.6.3 (xxxx/xx/xx):
+   - graph module:
+     - fix drawing with background
 
 0.6.2 (2004/04/07):
   - graph module:
